--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,7 +1,6 @@
 --------------------------------------------------------------
 ToDo:
-	1) Goto line 132 @Info.java
-	2) Goto line 67 @Info.java
+	1) GoTo line 182
 --------------------------------------------------------------
 
 --------------------------------------------------------------
