--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,11 +1,12 @@
 --------------------------------------------------------------
 ToDo:
-	1) GoTo line 182
+	Goto Line 299 SyntaxChecker.java
+	update_line_number() is not working for validate_ifs()
+	Validate if and while loops ...
 --------------------------------------------------------------
 
 --------------------------------------------------------------
 NotDone:
-	1) Process comments .....
 --------------------------------------------------------------
 
 --------------------------------------------------------------
