quotes_range_indices bugs ...

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,11 @@
 --------------------------------------------------------------
 ToDo:
-	1) Semantic Analysis
+	1) get_matching_close_bracket_index() does not check if character is inside
+	quotes ...
+	2) Take away quotes_range_indices if possible ... There seems to be
+	problems with it !!!!!!!
+	2) From where does the relative path of files start, inside the code.....
+	??????
 --------------------------------------------------------------
 
 --------------------------------------------------------------
