--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,8 +1,11 @@
 --------------------------------------------------------------
 ToDo:
-	0) Pointer arithmetic is broken.
+	0) Check InfixToPostfix ( while loop condition !stack.isEmpty() &&
+	Precedence(s) < Precedence(stack.peek()) )
+
 	1) Take away quotes_range_indices if possible ... There seems to be
 	problems with it !!!!!!!
+
 	2) From where does the relative path of files start, inside the code.....
 	??????
 --------------------------------------------------------------
