--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,5 +1,6 @@
 --------------------------------------------------------------
 ToDo:
+  -1) Deal with arrays !!!!
 	0) How to deal strings ?????????????????
 
 	1) Take away quotes_range_indices if possible ... There seems to be
