--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,10 +1,6 @@
 --------------------------------------------------------------
 ToDo:
-	0) Do in-built functions.
-		a) make_objects(type: Type, size: num) -> Type*;
-		b) free_objects(ptr: Type*) -> void;
-		c) print(s: string, ... primitive types);
-		d) scan(s: string, .. primitive types);
+	0) What to do for strings ???????
 
 	1) Take away quotes_range_indices if possible ... There seems to be
 	problems with it !!!!!!!
