--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------
 ToDo:
-	0) What to do for strings ???????
+	0) @NotWorking: 10 + (>> ptr). Here Type of (>> ptr) is still unresolved
+	and remains as @2@.
 
 	1) Take away quotes_range_indices if possible ... There seems to be
 	problems with it !!!!!!!
